fix no scrolling on ios with ontouchend

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -88,7 +88,8 @@ body {
 
 .no-scroll {
   overflow: hidden;
-  position: fixed; }
+  position: fixed;
+  height: 100%; }
 
 .container {
   max-width: 120rem;
@@ -96,7 +97,8 @@ body {
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
-  transition: all .2s; }
+  transition: all .2s;
+  overflow: auto; }
   @media only screen and (max-width: 75em) {
     .container {
       margin: 0;
